# CUDAKernels

./: CMakeLists.txt  Makefile  README.md
benchs/python/: bench_flash_attn_f32.py
include/: common.hpp  config.hpp  cuda_utils.hpp
include/kernels/: gemv.hpp  mod.hpp  reduce.hpp  softmax.hpp  warp_reduce.hpp
include/kernels/flash_attn/: flash_attn_f32.hpp
include/kernels/memory/: tile.hpp  vec.hpp
include/memory/: mod.hpp  tile.hpp  vec.hpp
include/memory/types/: register.hpp
include/warp/: ldmatrix.hpp  mma.hpp  mod.hpp  reduce.hpp
notes/: flash_attn.md  vec.md  warp.md
notes/TK/memory/: tile.md  vec.md
notes/memory/: ThunderKittens.md  coalescing.md
pybindings/: __init__.py
scripts/cmake/: generic.cmake
src/: CMakeLists.txt  cuda_utils.cc  torch_bind.cc
src/kernels/: gemv.cu  reduce.cu  softmax.cu  warp_reduce.cu
src/kernels/flash_attn/: flash_attn_f32.cu
src/kernels/memory/: tile.cu  vec.cu
tests/: test_2d_tile_copy.py  test_flash_attn_f32.py  test_reduce.py  test_softmax.py  test_vec_copy_f32.py
